rules/dangling-networkpolicy/test/success_matches_matchexpressions_notin/input/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: exp-notin-policy
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: tier
      operator: NotIn
      values:
      - prod
  policyTypes:
  - Ingress
