rules/dangling-networkpolicy/test/success_matches_matchexpressions_notin/input/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: staging-pod
  namespace: default
  labels:
    tier: staging
spec:
  containers:
  - name: app
    image: nginx:latest
